// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Блок 'Погода здесь' Отображение в статусе FAILED 1`] = `
<section
  className="header"
>
  <div
    className="ant-spin-nested-loading"
  >
    <div
      className="ant-spin-container"
    >
      <div
        className="ant-row-flex ant-row-flex-space-between ant-row-flex-middle"
        style={Object {}}
      >
        <div
          className="ant-col"
          style={Object {}}
        >
          <h1
            aria-label={null}
            className="ant-typography"
            style={
              Object {
                "WebkitLineClamp": null,
              }
            }
          >
            Погода здесь
          </h1>
        </div>
      </div>
      <div
        className="ant-result ant-result-warning"
      >
        <div
          className="ant-result-icon"
        >
          <i
            aria-label="icon: warning"
            className="anticon anticon-warning"
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="warning"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M955.7 856l-416-720c-6.2-10.7-16.9-16-27.7-16s-21.6 5.3-27.7 16l-416 720C56 877.4 71.4 904 96 904h832c24.6 0 40-26.6 27.7-48zM480 416c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v184c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V416zm32 352a48.01 48.01 0 0 1 0-96 48.01 48.01 0 0 1 0 96z"
              />
            </svg>
          </i>
        </div>
        <div
          className="ant-result-title"
        >
          Мы не смогли определить местоположение
        </div>
        <div
          className="ant-result-subtitle"
        >
          Возможно, оно просто выключено - проверьте в адресной строке браузера и попробуйте ещё раз. Кроме того, можно попробовать поискать свой город вручную
        </div>
        <div
          className="ant-result-content"
        >
          <span
            className="ant-input-search ant-input-search-enter-button ant-input-search-large ant-input-group-wrapper ant-input-group-wrapper-lg"
          >
            <span
              className="ant-input-wrapper ant-input-group"
            >
              <input
                className="ant-input ant-input-lg"
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="Ввести город вручную"
                style={null}
                type="text"
                value=""
              />
              <span
                className="ant-input-group-addon"
              >
                <button
                  className="ant-btn ant-input-search-button ant-btn-primary ant-btn-lg"
                  onClick={[Function]}
                  type="button"
                >
                  <i
                    aria-label="icon: search"
                    className="anticon anticon-search"
                  >
                    <svg
                      aria-hidden="true"
                      className=""
                      data-icon="search"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                      />
                    </svg>
                  </i>
                </button>
              </span>
            </span>
          </span>
        </div>
        <div
          className="ant-result-extra"
        >
          <button
            className="ant-btn"
            onClick={[Function]}
            type="button"
          >
            <span>
              Попробовать ещё раз
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Блок 'Погода здесь' Отображение в статусе LOADING 1`] = `
<section
  className="header"
>
  <div
    className="ant-spin-nested-loading"
  >
    <div>
      <div
        className="ant-spin ant-spin-spinning"
      >
        <span
          className="ant-spin-dot ant-spin-dot-spin"
        >
          <i
            className="ant-spin-dot-item"
          />
          <i
            className="ant-spin-dot-item"
          />
          <i
            className="ant-spin-dot-item"
          />
          <i
            className="ant-spin-dot-item"
          />
        </span>
      </div>
    </div>
    <div
      className="ant-spin-container ant-spin-blur"
    >
      <div
        className="ant-row-flex ant-row-flex-space-between ant-row-flex-middle"
        style={Object {}}
      >
        <div
          className="ant-col"
          style={Object {}}
        >
          <h1
            aria-label={null}
            className="ant-typography"
            style={
              Object {
                "WebkitLineClamp": null,
              }
            }
          >
            Погода здесь
          </h1>
        </div>
        <div
          className="ant-col"
          style={Object {}}
        >
          <button
            className="ant-btn ant-btn-primary ant-btn-lg"
            id="refreshLocationButton"
            onClick={[Function]}
            type="button"
          >
            <span>
              Обновить геолокацию
            </span>
          </button>
        </div>
      </div>
      <div
        className="ant-spin-nested-loading"
      >
        <div
          className="ant-spin-container"
        >
          <div
            className="ant-row-flex ant-row-flex-middle"
            style={Object {}}
          >
            <div
              className="ant-col ant-col-12"
              style={Object {}}
            >
              <div
                className="large-city"
              >
                <div
                  className="ant-row"
                  style={Object {}}
                >
                  <h2
                    aria-label={null}
                    className="ant-typography"
                    style={
                      Object {
                        "WebkitLineClamp": null,
                      }
                    }
                  >
                    Стоcхолм
                  </h2>
                </div>
                <div
                  className="ant-row-flex ant-row-flex-top"
                  style={Object {}}
                >
                  <div
                    className="ant-col"
                    style={Object {}}
                  >
                    <img
                      alt="icon"
                      className="weather-icon"
                      src="http://openweathermap.org/img/wn/10n@2x.png"
                    />
                  </div>
                  <div
                    className="ant-col"
                    style={Object {}}
                  >
                    <h1
                      aria-label={null}
                      className="ant-typography"
                      style={
                        Object {
                          "WebkitLineClamp": null,
                        }
                      }
                    >
                      2.96
                       ℃
                    </h1>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ant-col ant-col-12"
              style={Object {}}
            >
              <div
                className="ant-descriptions ant-descriptions-bordered"
              >
                <div
                  className="ant-descriptions-view"
                >
                  <table>
                    <tbody>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <th
                          className="ant-descriptions-item-label ant-descriptions-item-colon"
                        >
                          Ветер
                        </th>
                        <td
                          className="ant-descriptions-item-content"
                          colSpan={1}
                        >
                          8.2
                           м/с
                        </td>
                      </tr>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <th
                          className="ant-descriptions-item-label ant-descriptions-item-colon"
                        >
                          Облачность
                        </th>
                        <td
                          className="ant-descriptions-item-content"
                          colSpan={1}
                        >
                          модерате раин
                        </td>
                      </tr>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <th
                          className="ant-descriptions-item-label ant-descriptions-item-colon"
                        >
                          Давление
                        </th>
                        <td
                          className="ant-descriptions-item-content"
                          colSpan={1}
                        >
                          1003
                           гПа
                        </td>
                      </tr>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <th
                          className="ant-descriptions-item-label ant-descriptions-item-colon"
                        >
                          Влажность
                        </th>
                        <td
                          className="ant-descriptions-item-content"
                          colSpan={1}
                        >
                          93
                          %
                        </td>
                      </tr>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <th
                          className="ant-descriptions-item-label ant-descriptions-item-colon"
                        >
                          Координаты
                        </th>
                        <td
                          className="ant-descriptions-item-content"
                          colSpan={1}
                        >
                          [
                          59.33
                          , 
                          18.07
                          ]
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Блок 'Погода здесь' Отображение в статусе OVERRIDDEN 1`] = `
<section
  className="header"
>
  <div
    className="ant-spin-nested-loading"
  >
    <div
      className="ant-spin-container"
    >
      <div
        className="ant-row-flex ant-row-flex-space-between ant-row-flex-middle"
        style={Object {}}
      >
        <div
          className="ant-col"
          style={Object {}}
        >
          <h1
            aria-label={null}
            className="ant-typography"
            style={
              Object {
                "WebkitLineClamp": null,
              }
            }
          >
            Погода здесь
          </h1>
        </div>
        <div
          className="ant-col ant-col-10"
          style={Object {}}
        >
          <span
            className="ant-input-search ant-input-search-enter-button ant-input-search-large ant-input-group-wrapper ant-input-group-wrapper-lg"
          >
            <span
              className="ant-input-wrapper ant-input-group"
            >
              <input
                className="ant-input ant-input-lg"
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="Ввести вручную"
                style={null}
                type="text"
                value=""
              />
              <span
                className="ant-input-group-addon"
              >
                <button
                  className="ant-btn ant-input-search-button ant-btn-primary ant-btn-lg"
                  onClick={[Function]}
                  type="button"
                >
                  <i
                    aria-label="icon: search"
                    className="anticon anticon-search"
                  >
                    <svg
                      aria-hidden="true"
                      className=""
                      data-icon="search"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                      />
                    </svg>
                  </i>
                </button>
              </span>
            </span>
          </span>
        </div>
        <div
          className="ant-col"
          style={Object {}}
        >
          <button
            className="ant-btn ant-btn-primary ant-btn-lg"
            id="refreshLocationButton"
            onClick={[Function]}
            type="button"
          >
            <span>
              Определить город
            </span>
          </button>
        </div>
      </div>
      <div
        className="ant-spin-nested-loading"
      >
        <div
          className="ant-spin-container"
        >
          <div
            className="ant-row-flex ant-row-flex-middle"
            style={Object {}}
          >
            <div
              className="ant-col ant-col-12"
              style={Object {}}
            >
              <div
                className="large-city"
              >
                <div
                  className="ant-row"
                  style={Object {}}
                >
                  <h2
                    aria-label={null}
                    className="ant-typography"
                    style={
                      Object {
                        "WebkitLineClamp": null,
                      }
                    }
                  >
                    Стоcхолм
                  </h2>
                </div>
                <div
                  className="ant-row-flex ant-row-flex-top"
                  style={Object {}}
                >
                  <div
                    className="ant-col"
                    style={Object {}}
                  >
                    <img
                      alt="icon"
                      className="weather-icon"
                      src="http://openweathermap.org/img/wn/10n@2x.png"
                    />
                  </div>
                  <div
                    className="ant-col"
                    style={Object {}}
                  >
                    <h1
                      aria-label={null}
                      className="ant-typography"
                      style={
                        Object {
                          "WebkitLineClamp": null,
                        }
                      }
                    >
                      2.96
                       ℃
                    </h1>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ant-col ant-col-12"
              style={Object {}}
            >
              <div
                className="ant-descriptions ant-descriptions-bordered"
              >
                <div
                  className="ant-descriptions-view"
                >
                  <table>
                    <tbody>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <th
                          className="ant-descriptions-item-label ant-descriptions-item-colon"
                        >
                          Ветер
                        </th>
                        <td
                          className="ant-descriptions-item-content"
                          colSpan={1}
                        >
                          8.2
                           м/с
                        </td>
                      </tr>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <th
                          className="ant-descriptions-item-label ant-descriptions-item-colon"
                        >
                          Облачность
                        </th>
                        <td
                          className="ant-descriptions-item-content"
                          colSpan={1}
                        >
                          модерате раин
                        </td>
                      </tr>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <th
                          className="ant-descriptions-item-label ant-descriptions-item-colon"
                        >
                          Давление
                        </th>
                        <td
                          className="ant-descriptions-item-content"
                          colSpan={1}
                        >
                          1003
                           гПа
                        </td>
                      </tr>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <th
                          className="ant-descriptions-item-label ant-descriptions-item-colon"
                        >
                          Влажность
                        </th>
                        <td
                          className="ant-descriptions-item-content"
                          colSpan={1}
                        >
                          93
                          %
                        </td>
                      </tr>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <th
                          className="ant-descriptions-item-label ant-descriptions-item-colon"
                        >
                          Координаты
                        </th>
                        <td
                          className="ant-descriptions-item-content"
                          colSpan={1}
                        >
                          [
                          59.33
                          , 
                          18.07
                          ]
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Блок 'Погода здесь' Отображение в статусе SUCCESS 1`] = `
<section
  className="header"
>
  <div
    className="ant-spin-nested-loading"
  >
    <div
      className="ant-spin-container"
    >
      <div
        className="ant-row-flex ant-row-flex-space-between ant-row-flex-middle"
        style={Object {}}
      >
        <div
          className="ant-col"
          style={Object {}}
        >
          <h1
            aria-label={null}
            className="ant-typography"
            style={
              Object {
                "WebkitLineClamp": null,
              }
            }
          >
            Погода здесь
          </h1>
        </div>
        <div
          className="ant-col"
          style={Object {}}
        >
          <button
            className="ant-btn ant-btn-primary ant-btn-lg"
            id="refreshLocationButton"
            onClick={[Function]}
            type="button"
          >
            <span>
              Обновить геолокацию
            </span>
          </button>
        </div>
      </div>
      <div
        className="ant-spin-nested-loading"
      >
        <div
          className="ant-spin-container"
        >
          <div
            className="ant-row-flex ant-row-flex-middle"
            style={Object {}}
          >
            <div
              className="ant-col ant-col-12"
              style={Object {}}
            >
              <div
                className="large-city"
              >
                <div
                  className="ant-row"
                  style={Object {}}
                >
                  <h2
                    aria-label={null}
                    className="ant-typography"
                    style={
                      Object {
                        "WebkitLineClamp": null,
                      }
                    }
                  >
                    Стоcхолм
                  </h2>
                </div>
                <div
                  className="ant-row-flex ant-row-flex-top"
                  style={Object {}}
                >
                  <div
                    className="ant-col"
                    style={Object {}}
                  >
                    <img
                      alt="icon"
                      className="weather-icon"
                      src="http://openweathermap.org/img/wn/10n@2x.png"
                    />
                  </div>
                  <div
                    className="ant-col"
                    style={Object {}}
                  >
                    <h1
                      aria-label={null}
                      className="ant-typography"
                      style={
                        Object {
                          "WebkitLineClamp": null,
                        }
                      }
                    >
                      2.96
                       ℃
                    </h1>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ant-col ant-col-12"
              style={Object {}}
            >
              <div
                className="ant-descriptions ant-descriptions-bordered"
              >
                <div
                  className="ant-descriptions-view"
                >
                  <table>
                    <tbody>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <th
                          className="ant-descriptions-item-label ant-descriptions-item-colon"
                        >
                          Ветер
                        </th>
                        <td
                          className="ant-descriptions-item-content"
                          colSpan={1}
                        >
                          8.2
                           м/с
                        </td>
                      </tr>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <th
                          className="ant-descriptions-item-label ant-descriptions-item-colon"
                        >
                          Облачность
                        </th>
                        <td
                          className="ant-descriptions-item-content"
                          colSpan={1}
                        >
                          модерате раин
                        </td>
                      </tr>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <th
                          className="ant-descriptions-item-label ant-descriptions-item-colon"
                        >
                          Давление
                        </th>
                        <td
                          className="ant-descriptions-item-content"
                          colSpan={1}
                        >
                          1003
                           гПа
                        </td>
                      </tr>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <th
                          className="ant-descriptions-item-label ant-descriptions-item-colon"
                        >
                          Влажность
                        </th>
                        <td
                          className="ant-descriptions-item-content"
                          colSpan={1}
                        >
                          93
                          %
                        </td>
                      </tr>
                      <tr
                        className="ant-descriptions-row"
                      >
                        <th
                          className="ant-descriptions-item-label ant-descriptions-item-colon"
                        >
                          Координаты
                        </th>
                        <td
                          className="ant-descriptions-item-content"
                          colSpan={1}
                        >
                          [
                          59.33
                          , 
                          18.07
                          ]
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;
